
#mpc_headerdir=$(includedir)/mpc/
#mpc_header_HEADERS= $(abs_top_srcdir)/MPC_Common/include/mpc_common_aio.h $(abs_top_srcdir)/MPC_Common/include/mpc_common_asm.h $(abs_top_srcdir)/MPC_Common/include/mpc_common_datastructure.h $(abs_top_srcdir)/MPC_Common/include/mpc_common.h $(abs_top_srcdir)/MPC_Common/include/mpc_common_helper.h $(abs_top_srcdir)/MPC_Common/include/mpc_common_rank.h $(abs_top_srcdir)/MPC_Common/include/mpc_common_spinlock.h $(abs_top_srcdir)/MPC_Common/include/mpc_common_types.h $(abs_top_srcdir)/MPC_Common/include/sctk_alloc.h $(abs_top_srcdir)/MPC_Common/include/sctk_debug.h $(abs_top_srcdir)/MPC_Common/include/sctk_dummy.h $(abs_top_srcdir)/MPC_Common/include/sctk_no_alloc.h $(abs_top_srcdir)/MPC_Common/include/sctk_pm_json.h $(abs_top_srcdir)/MPC_Common/include/utarray.h $(abs_top_srcdir)/MPC_Common/include/uthash.h $(abs_top_srcdir)/MPC_Common/include/utlist.h

SUBDIRS=src
