
mpc_headerdir=$(pkgincludedir)

#mpc_header_HEADERS= $(abs_srcdir)/include/mpc_common_aio.h $(abs_srcdir)/include/mpc_common_asm.h $(abs_srcdir)/include/mpc_common_datastructure.h $(abs_srcdir)/include/mpc_common.h $(abs_srcdir)/include/mpc_common_helper.h $(abs_srcdir)/include/mpc_common_rank.h $(abs_srcdir)/include/mpc_common_spinlock.h  $(abs_srcdir)/include/sctk_alloc.h  $(abs_srcdir)/include/sctk_dummy.h $(abs_srcdir)/include/sctk_no_alloc.h $(abs_srcdir)/include/sctk_pm_json.h $(abs_srcdir)/include/utarray.h $(abs_srcdir)/include/uthash.h $(abs_srcdir)/include/utlist.h

mpc_header_HEADERS= $(abs_srcdir)/include/mpc_common_asm.h $(abs_srcdir)/include/mpc_common_types.h  $(abs_srcdir)/include/mpc_common_debugger.h $(abs_srcdir)/include/sctk_debug.h  $(abs_srcdir)/include/mpc_keywords.h $(abs_srcdir)/include/uthash.h

SUBDIRS=src
