
mpc_headerdir=$(includedir)/mpc/
mpc_header_HEADERS=$(abs_top_builddir)/mpc_config.h  $(abs_top_builddir)/src/include/mpc_threads_config.h $(abs_top_srcdir)/src/include/mpc.h $(abs_top_srcdir)/src/include/mpc_main.h

#
# Define the MPC Library
#

lib_LTLIBRARIES = libmpcframework.la

libmpcframework_la_LIBADD = @ALL_MPC_LIBS@

libmpcframework_la_SOURCES=
